tests/tooling/fixtures/native/execution/negative/duplicate_pure_qualifier.objc3
module DuplicatePureQualifier;

pure pure fn touch() -> i32;

fn main() -> i32 {
  return 0;
}
